--- a/client-cms/package.json
+++ b/client-cms/package.json
@@ -14,6 +14,8 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
+    "dotenv": "^16.0.3",
+    "dotenv-expand": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
