--- a/client-cms/package.json
+++ b/client-cms/package.json
@@ -22,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
     "react-icons": "^4.6.0",
+    "react-native-select-dropdown": "^3.0.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
     "react-switch": "^7.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
