--- a/client-cms/package.json
+++ b/client-cms/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "chart.js": "^3.9.1",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^9.0.0",
