--- a/client-cms/package.json
+++ b/client-cms/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^3.9.1",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^9.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
